--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 
   --border-radius: 2rem;
   --btn-padding: 0.5rem 2rem;
+
+  --transition: all 0.3s ease-in;
 }
 
 * {
@@ -32,4 +34,101 @@ body {
 
 .container {
   width: 100%;
+  height: 100vh;
+  position: relative;
 }
+
+/* ==========NAVBAR========== */
+
+nav {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 4rem;
+  background-color: var(--color-secondary-black);
+  position: sticky;
+  top: 0;
+  left: 0;
+}
+
+/* .container nav .nav-container .nav-logo {
+  margin-left: 3rem;
+} */
+
+nav .nav-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+nav .nav-container .nav-logo h3 {
+  color: var(--color-white);
+  font-size: 1rem;
+}
+
+nav .nav-container .nav-logo h3 span {
+  color: var(--color-primary);
+}
+
+nav .nav-container .nav-logo p {
+  color: var(--color-white);
+  font-size: 0.52rem;
+  font-weight: 300;
+}
+
+nav .nav-container .nav-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8rem;
+}
+
+/* nav .nav-container .nav-items {
+  display: flex;
+  
+} */
+nav .nav-container .nav-items ul {
+  display: flex;
+  gap: 2rem;
+}
+
+nav .nav-container .nav-items ul a {
+  color: var(--color-white);
+  font-size: 0.8rem;
+  transition: var(--transition);
+}
+
+nav .nav-container .nav-items ul a:first-child {
+  color: var(--color-primary);
+  font-size: 0.7rem;
+  font-weight: 600;
+}
+
+nav .nav-container .nav-items ul a:first-child:hover {
+  color: var(--color-white);
+}
+
+nav .nav-container .nav-items ul a:hover {
+  color: var(--color-primary);
+}
+
+.container .nav-bottom {
+  width: 100%;
+  background-color: var(--color-primary);
+  position: absolute;
+  top: 4rem;
+  left: 0;
+  padding: 0.5rem;
+}
+
+.container .nav-bottom p {
+  text-align: center;
+  font-size: 0.7rem;
+  font-weight: 500;
+}
+
+.container .nav-bottom p span {
+  color: var(--color-white);
+}
+
+/* ==========HEADER========== */
