--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ body {
 .container {
   width: 100%;
   height: 100vh;
-  position: relative;
+  margin: 0 auto;
+  /* position: relative; */
 }
 
 /* ==========NAVBAR========== */
@@ -49,6 +50,7 @@ nav {
   position: sticky;
   top: 0;
   left: 0;
+  z-index: 99;
 }
 
 /* .container nav .nav-container .nav-logo {
@@ -132,3 +134,60 @@ nav .nav-container .nav-items ul a:hover {
 }
 
 /* ==========HEADER========== */
+
+header {
+  width: 100%;
+  position: relative;
+}
+
+header .header-container {
+  width: 100%;
+  height: 70vh;
+  /* background-color: aqua; */
+  position: absolute;
+  top: 1rem;
+  left: 0;
+}
+
+header .header-container .header-contents {
+  padding: 2rem 0 0 7.5rem;
+  width: 100%;
+  height: 70vh;
+  background-image: url(./images/portrait-young-girl-red-beret-painting-her-lips-with-bright-lipstick-pink-background.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+header .header-container .header-contents h5 {
+  color: var(--color-primary);
+  position: relative;
+  text-transform: uppercase;
+}
+
+header .header-container .header-contents h5::after {
+  content: "";
+  width: 25%;
+  height: 0.1rem;
+  position: absolute;
+  bottom: -0.2rem;
+  left: 0;
+  background-color: var(--color-primary);
+}
+
+header .header-container .header-contents .header-subtext {
+  color: var(--color-white);
+  padding-top: 0.5rem;
+}
+
+header .header-container .header-contents .header-subtext h4 {
+  font-size: 0.85rem;
+}
+
+header .header-container .header-contents .header-subtext p {
+  width: 25%;
+  /* height: 5%; */
+  text-align: justify;
+  font-size: 0.8rem;
+  padding-top: 1rem;
+}
