--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
   --color-white: #fff;
   --color-bg: #f5f5f5;
 
-  --border-radius: 2rem;
-  --btn-padding: 0.5rem 2rem;
+  --button-border-radius: 0.2rem;
+  --btn-padding: 0.3rem 0.6rem;
 
   --transition: all 0.3s ease-in;
 }
@@ -185,9 +185,130 @@ header .header-container .header-contents .header-subtext h4 {
 }
 
 header .header-container .header-contents .header-subtext p {
-  width: 25%;
+  width: 20%;
   /* height: 5%; */
   text-align: justify;
-  font-size: 0.8rem;
+  font-size: 0.6rem;
   padding-top: 1rem;
+}
+
+header .header-container .header-contents .action-button a {
+  margin-top: 2rem;
+  display: inline-block;
+  background-color: transparent;
+  border: 0.1rem solid var(--color-primary);
+  border-radius: var(--button-border-radius);
+  color: var(--color-primary);
+  font-size: 0.7rem;
+  font-weight: 600;
+  padding: var(--btn-padding);
+  transition: var(--transition);
+}
+
+header .header-container .header-contents .action-button a:hover {
+  color: var(--color-white);
+  background-color: var(--color-primary);
+}
+
+header .header-container .header-contents .action-button a:active {
+  color: var(--color-white);
+  background-color: #ec4163;
+}
+
+/* ==========MAIN========== */
+
+main {
+  width: 100%;
+  /* height: 100vh; */
+  position: relative;
+}
+
+main .page-performance {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main .page-performance .page-performance-data {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: absolute;
+  top: 36rem;
+  width: 80%;
+  height: 8rem;
+  background-color: var(--color-primary);
+  border-radius: 1rem;
+  color: var(--color-white);
+}
+
+main .page-performance .page-performance-data h2 p {
+  font-size: 1.3rem;
+}
+
+main .list-of-items {
+  width: 90%;
+  position: absolute;
+  top: 50rem;
+  left: 8rem;
+}
+
+main .list-of-items h2 {
+  color: var(--color-secondary-black);
+  font-size: 2rem;
+  font-weight: 800;
+  /* margin-left: 2rem; */
+}
+
+main .list-of-items table {
+  margin-top: 1.5rem;
+  width: 100%;
+  text-align: left;
+  font-size: 0.6rem;
+  font-weight: 500;
+  color: #7e7e7e;
+}
+
+main .list-of-items table thead {
+  color: var(--color-primary);
+}
+
+/* ==========FOOTER========== */
+
+footer {
+  width: 100%;
+  position: relative;
+}
+
+footer .footer-container {
+  width: 100%;
+  height: 30vh;
+  position: absolute;
+  top: 70rem;
+  background-color: var(--color-secondary-black);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+footer .footer-container .footer-content {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--color-white);
+  font-size: 0.6rem;
+}
+
+footer .footer-container .footer-content h3 {
+  font-size: 1.1rem;
+}
+
+footer .footer-container .footer-content h3 span {
+  color: var(--color-primary);
+}
+
+footer .footer-container .footer-content .footer-icons a {
+  font-size: 0.9rem;
+  color: var(--color-white);
 }
