--- a/style.css
+++ b/style.css
@@ -47,14 +47,14 @@ nav {
   width: 100%;
   height: 4rem;
   background-color: var(--color-secondary-black);
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 99;
 }
 
 /* .container nav .nav-container .nav-logo {
-  margin-left: 3rem;
+  margin-left: 0.1rem;
 } */
 
 nav .nav-container {
@@ -145,15 +145,15 @@ header .header-container {
   height: 70vh;
   /* background-color: aqua; */
   position: absolute;
-  top: 1rem;
+  top: 5.8rem;
   left: 0;
 }
 
 header .header-container .header-contents {
-  padding: 2rem 0 0 7.5rem;
+  padding: 2rem 0 0 4.6rem;
   width: 100%;
   height: 70vh;
-  background-image: url(./images/portrait-young-girl-red-beret-painting-her-lips-with-bright-lipstick-pink-background.jpg);
+  background-image: url(./images/Header-image-bg.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -201,6 +201,7 @@ header .header-container .header-contents .action-button a {
   color: var(--color-primary);
   font-size: 0.7rem;
   font-weight: 600;
+
   padding: var(--btn-padding);
   transition: var(--transition);
 }
@@ -233,7 +234,7 @@ main .page-performance .page-performance-data {
   justify-content: space-evenly;
   align-items: center;
   position: absolute;
-  top: 36rem;
+  top: 40rem;
   width: 80%;
   height: 8rem;
   background-color: var(--color-primary);
@@ -248,8 +249,8 @@ main .page-performance .page-performance-data h2 p {
 main .list-of-items {
   width: 90%;
   position: absolute;
-  top: 50rem;
-  left: 8rem;
+  top: 55rem;
+  left: 7rem;
 }
 
 main .list-of-items h2 {
@@ -261,7 +262,7 @@ main .list-of-items h2 {
 
 main .list-of-items table {
   margin-top: 1.5rem;
-  width: 100%;
+  width: 90%;
   text-align: left;
   font-size: 0.6rem;
   font-weight: 500;
@@ -270,6 +271,61 @@ main .list-of-items table {
 
 main .list-of-items table thead {
   color: var(--color-primary);
+}
+
+/* ==========NEWSLETTER========== */
+
+main .newsletter-container {
+  width: 80%;
+  height: 8rem;
+
+  position: absolute;
+  top: 75rem;
+  left: 7rem;
+  background-color: var(--color-primary);
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+  border-radius: 1rem;
+}
+
+main .newsletter-container .newsletter h3 {
+  color: var(--color-white);
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+main .newsletter-container input[type="email"] {
+  padding: 0.15rem;
+  border: 0.1rem solid var(--color-secondary-black);
+  border-radius: 0.2rem;
+  font-family: inherit;
+}
+
+main .newsletter-container input[type="email"]::placeholder {
+  color: #7e7e7e;
+  font-size: 0.6rem;
+  font-family: inherit;
+}
+
+main .newsletter-container button {
+  margin-top: 1rem;
+  border: 0.1rem solid var(--color-primary);
+  border-radius: var(--button-border-radius);
+  color: var(--color-white);
+  background-color: var(--color-secondary-black);
+  font-size: 0.7rem;
+  font-weight: 600;
+  padding: var(--btn-padding);
+  transition: var(--transition);
+  font-family: inherit;
+}
+
+main .newsletter-container button:hover {
+  background-color: rgb(29, 29, 29);
+  cursor: pointer;
 }
 
 /* ==========FOOTER========== */
@@ -283,7 +339,7 @@ footer .footer-container {
   width: 100%;
   height: 30vh;
   position: absolute;
-  top: 70rem;
+  top: 90rem;
   background-color: var(--color-secondary-black);
   display: flex;
   flex-direction: column;
